--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 
 <body class="manrope">
+    <!-- banner section -->
     <header class="max-w-screen-xl mx-auto my-10 flex justify-center items-center flex-col lg:flex-row gap-12">
         <div class="flex flex-col justify-center items-center lg:items-start gap-8 flex-1 pt-5">
             <h1 class="text-5xl lg:text-7xl text-dark font-extrabold text-center lg:text-left">It's good <br>
@@ -68,6 +69,37 @@
         
 
     </header>
+    <!-- featured section -->
+    <section class="max-w-screen-xl mx-auto my-24">
+        <div class="text-center mb-16 ">
+            <h1 class="text-4xl font-bold mb-6">Our Featured Products</h1>
+            <span class="text-text text-base">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. 
+            </span>
+        </div>
+        <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="py-14 px-8 bg-gradient-to-r from-[#e6d5d5] to-[#F4F4F4] flex flex-col justify-center items-center gap-4 rounded-lg">
+                <img src="./images/tea-1.png" alt="">
+                <h1 class="font-bold text-lg">Milk Tea</h1>
+                <p class="text-center">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="py-14 px-8 bg-gradient-to-r from-[#e6d5d5] to-[#F4F4F4] flex flex-col justify-center items-center gap-4 rounded-lg">
+                <img src="./images/tea-2.png" alt="">
+                <h1 class="font-bold text-lg">Milk Tea</h1>
+                <p class="text-center">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="py-14 px-8 bg-gradient-to-r from-[#e6d5d5] to-[#F4F4F4] flex flex-col justify-center items-center gap-4 rounded-lg">
+                <img src="./images/tea-3.png" alt="">
+                <h1 class="font-bold text-lg">Milk Tea</h1>
+                <p class="text-center">Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="py-14 px-8 bg-gradient-to-r from-[#e6d5d5] to-[#F4F4F4] flex flex-col justify-center items-center gap-4 rounded-lg">
+                <img src="./images/tea-4.png" alt="">
+                <h1 class="font-bold text-lg">Milk Tea</h1>
+                <p class="text-center">Creamer could be replaced by fresh milk</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
