--- a/index.html
+++ b/index.html
@@ -100,7 +100,29 @@
             </div>
         </div>
     </section>
+    <!-- great tea section -->
+    <section class="flex flex-col lg:flex-row max-w-screen-xl mx-auto my-28 gap-12">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-2 w-full lg:w-[50%] ">
+            <div class="rounded-lg bg-gradient-to-r from-[#F00F001A] to-[#FF89381A] w-full lg:w-[270px] h-[136px]"></div>
+            <div class="rounded-lg bg-gradient-to-r from-[#F00F001A] to-[#FF89381A] flex justify-center items-center py-6 px-3  lg:row-span-4">
+                <img class="" src="./images/fresh-1.png" alt="">
+            </div>
+            <div class="rounded-lg bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF0A] flex justify-center items-center py-6 px-3 lg:row-span-4 ">
+                <img src="./images/fresh-2.png" alt="">
+            </div>
+            <div class="rounded-lg bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF0A] w-full lg:w-[270px] h-[136px] "></div>
+        </div>
+        <div class="w-full text-center lg:text-left lg:w-[50%] flex justify-center items-center lg:items-start flex-col gap-6 lg:ml-28">
+            <h1 class="text-5xl font-extrabold text-[#1C1C1C]">Great Tea, Freshly <br>Presented</h1>
+            <p class="text-text text-base font-medium mb-2 w-full lg:w-[525px]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h1 class="text-[#1C1C1C] text-xl font-extrabold">Unique Taste</h1>
+            <p class="text-text text-base font-medium mb-2">A Unique and different style from other teapots gives a <br>luxurious and minimalist impression</p>
+            <h1 class="text-[#1C1C1C] text-xl font-extrabold">Premium Quality</h1>
+            <p class="text-text text-base font-medium">A Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
+          
+        </div>
 
+    </section>
 </body>
 
 </html>
