--- a/index.html
+++ b/index.html
@@ -123,6 +123,43 @@
         </div>
 
     </section>
+    <!-- client section -->
+    <section class="w-full lg:max-w-screen-xl lg:mx-auto lg:my-24  bg-gradient-to-r from-color1 to-color2 py-6 lg:py-20 px-4 lg:px-16 flex gap-30 lg:gap-40 rounded-lg flex-col lg:flex-row">
+        <div class="flex justify-center items-center flex-0 lg:flex-1 gap-6">
+            <div class="space-y-6 flex justify-center items-center lg:items-start flex-col text-center lg:text-left">
+                <h1 class="text-[#F4F4F4] text-3xl lg:text-5xl font-extrabold">Meet Our Super <br> Clients</h1>
+                <p class="text-base text-[#F4F4F4] w-full lg:w-[400px]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="w-36 h-14 text-color2 bg-white rounded-lg border-none">Show all</button>
+            </div>
+        </div>
+        <div class="relative space-y-10 lg:flex-1 mt-8 ">
+            <!-- first card -->
+            <div class="relative p-4 lg:p-6 flex flex-col justify-center items-start bg-white w-full lg:w-[433px] h-auto lg:h-[233px] rounded-lg  opacity-50 z-10">
+                <img src="./images/client.png" class="absolute -top-6 -left-2 lg:-left-6 border-white border-4 rounded-full" alt="">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <span class="font-extrabold mb-1 mt-4">Ilham Yuda</span>
+                <span>Businessman</span>
+            </div>
+            <!-- top card -->
+            <div class="absolute top-16 lg:top-24 lg:-left-20">
+                <div class="z-20 relative p-4 lg:p-6 flex flex-col justify-center items-start bg-white w-full lg:w-[433px] h-auto lg:h-[233px] rounded-lg">
+                    <img src="./images/client.png" class="absolute -top-6 -left-2 lg:-left-6 border-white border-4 rounded-full" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <span class="font-extrabold mb-1 mt-4">Ilham Yuda</span>
+                    <span>Businessman</span>
+                </div>
+            </div>
+           
+            <!-- last card -->
+            <div class="z-10 relative p-4 lg:p-6 flex flex-col justify-center items-start bg-white w-full lg:w-[433px] h-auto lg:h-[233px] rounded-lg opacity-50">
+                <img src="./images/client.png" class="absolute -top-6 -left-2 lg:-left-6 border-white border-4 rounded-full" alt="">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <span class="font-extrabold mb-1 mt-4">Ilham Yuda</span>
+                <span>Businessman</span>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
