--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         .manrope{
             font-family: 'Manrope', sans-serif;
         }
+        .decoration{
+            text-decoration: none;
+        }
     </style>
     <script>
         tailwind.config = {
@@ -157,6 +160,51 @@
                 <span class="font-extrabold mb-1 mt-4">Ilham Yuda</span>
                 <span>Businessman</span>
             </div>
+        </div>
+
+    </section>
+    <!-- News and event section -->
+    <section class="max-w-screen-xl mx-auto my-24">
+        <div class="text-center mb-16 ">
+            <h1 class="text-4xl font-bold mb-6">News & Events</h1>
+            <span class="text-text text-base">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. 
+            </span>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-3">
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="./images/news-1.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-start text-left space-y-2">
+                    <span class="text-[#777] text-base font-medium ">Feb 05, 2027</span>
+                  <h2 class="card-title">Collecting 8 points for <br>discount</h2>
+                  <p class="text-base text-text">There are many variations of passages of Lorem Ipsum available.</p>
+                  <a class="decoration-0 text-[#1C1C1C] text-base font-bold">Learn More</a>
+                </div>
+              </div>
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="./images/news-2.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-start text-left space-y-2">
+                    <span class="text-[#777] text-base font-medium ">Feb 05, 2027</span>
+                  <h2 class="card-title">Collecting 8 points for <br>discount</h2>
+                  <p class="text-base text-text">There are many variations of passages of Lorem Ipsum available.</p>
+                  <a class="decoration-0 text-[#1C1C1C] text-base font-bold">Learn More</a>
+                </div>
+              </div>
+            <div class="card w-96 bg-base-100 shadow-xl">
+                <figure class="px-10 pt-10">
+                  <img src="./images/news-3.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-start text-left space-y-2">
+                    <span class="text-[#777] text-base font-medium ">Feb 05, 2027</span>
+                  <h2 class="card-title">Collecting 8 points for <br>discount</h2>
+                  <p class="text-base text-text">There are many variations of passages of Lorem Ipsum available.</p>
+                  <a class="decoration-0 text-[#1C1C1C] text-base font-bold">Learn More</a>
+                </div>
+              </div>
         </div>
 
     </section>
